# aoi

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
aoi/: __main__.py  _misc.py  base.py  sqlite.py  utils.py
src/: lib.rs
src/orm/: alter.rs  client.rs  ddl.rs  dml.rs  mod.rs  query.rs  schema.rs  types.rs
